Bug Fixed Form submitting on navigation

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <button (click)="toggleSideBar()" mat-mini-fab color='primary'><span
+  <button (click)="toggleSideBar()" mat-mini-fab color='primary' type="button"><span
       class="material-icons">{{ isSidebarOpen ? 'menu_open' : 'menu' }}</span>
   </button>
   <span>School Management System</span>
