--- a/src/app/pages/admissions/students/view-students/view-students.component.html
+++ b/src/app/pages/admissions/students/view-students/view-students.component.html
@@ -1,16 +1,4 @@
-<div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/8V46UZCS0V.jpg">
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/LTLE4QGRVQ.jpg">
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/R926LU1YEA.jpg">
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/U9PP3KXXY2.jpg">
-  </div>
+<div class="container">
 </div>
 <style>
   .container {
