--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -10,6 +10,8 @@
 </mat-toolbar>
 <div class="mat-app-background basic-container">
   <app-sidebar>
-    <router-outlet></router-outlet>
+    <section class="container-fluid">
+      <router-outlet></router-outlet>
+    </section>
   </app-sidebar>
 </div>
