--- a/src/app/pages/curriculum-maintenance/units/create-unit/create-unit.component.html
+++ b/src/app/pages/curriculum-maintenance/units/create-unit/create-unit.component.html
@@ -12,8 +12,8 @@
           </mat-error>
         </mat-form-field>
       </section>
-      <section class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        <app-select type="units" formControlName="unitCategory"></app-select>
+      <section *ngIf="!category" class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <app-select  type="units" formControlName="unitCategory"></app-select>
         <!-- <mat-select placeholder="Select category" (selectionChange)="selectedCategory($event)"
           formControlName="unitCategory" (blur)="validateUnitCategory()"
           id="unitForm">
