user can update class level category

--- a/src/app/pages/curriculum-maintenance/class-levels/create-class-level-category/create-class-level-category.component.html
+++ b/src/app/pages/curriculum-maintenance/class-levels/create-class-level-category/create-class-level-category.component.html
@@ -30,7 +30,7 @@
   <section class="row" style="margin-top: 20px">
     <section class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <button [disabled]="!classLevelCategoryForm.valid" type="submit" mat-raised-button class="btn btn-success">
-        {{ newForm ? 'Create': 'Update'}} Subject/Unit</button>
+        {{ newForm ? 'Create': 'Update'}} Class Level</button>
     </section>
   </section>
 
