installed angular pwa

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,7 @@
           </mat-form-field>
         </p>
         <p>
-          <label for="remember_me">
+          <label for="remember_me-input">
             <mat-checkbox type="checkbox" id="remember_me" formControlName="rememberMe"></mat-checkbox>
             Remember me
           </label>
