--- a/src/app/pages/admissions/students/student-identification-form/student-identification-form.component.html
+++ b/src/app/pages/admissions/students/student-identification-form/student-identification-form.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="userIdentificaionForm" (ngSubmit)="submit()">
+<!-- <form [formGroup]="userIdentificaionForm" (ngSubmit)="submit()"> TODO Check why this is a function -->
+<form [formGroup]="userIdentificaionForm"> 
   <fieldset>
     <legend>
       <h2>ID Number</h2>
