--- a/src/app/pages/curriculum-maintenance/class-levels/view-class-level-categories/view-class-level-categories.component.html
+++ b/src/app/pages/curriculum-maintenance/class-levels/view-class-level-categories/view-class-level-categories.component.html
@@ -43,7 +43,7 @@
         <button [routerLink]="viewClassLevelCategoryCurriculum(category.id)"
           attr.aria-label="{{ 'View subject category ' + category.name }}" title="View Item" type="button"
           mat-icon-button>
-          <mat-icon color="accent">remove_red_eye</mat-icon>
+          <mat-icon>remove_red_eye</mat-icon>
         </button>
       </td>
     </ng-container>
