--- a/src/app/pages/academic-year/create-academic-year/create-academic-year.component.html
+++ b/src/app/pages/academic-year/create-academic-year/create-academic-year.component.html
@@ -57,7 +57,8 @@
           </mat-checkbox>
         </section>
         <section class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <app-select [parentId]="unit.get('subjectId').value" type="unit-levels" formControlName="subjectLevel" multiple>
+          <app-select type="unit-levels" formControlName="subjectLevel" multiple>
+          <!-- <app-select [parentId]="unit.get('subjectId').value" type="unit-levels" formControlName="subjectLevel" multiple> -->
           </app-select>
         </section>
       </section>
