View Academic year page created

--- a/src/styles.less
+++ b/src/styles.less
@@ -10,4 +10,12 @@ header {
 mat-form-field {
   width: 100%;
 }
+h1 {
+  font-size: 1.8em;
+  color: darkblue;
+}
+h2 {
+  font-size: 15m;
+  color: darkblue;
+}
 @import './assets/css/bootstrap.css';
