--- a/src/app/pages/admissions/students/student-identification-form/student-identification-form.component.html
+++ b/src/app/pages/admissions/students/student-identification-form/student-identification-form.component.html
@@ -1,31 +1,36 @@
 <!-- <form [formGroup]="userIdentificaionForm" (ngSubmit)="submit()"> TODO Check why this is a function -->
-<form [formGroup]="userIdentificaionForm">
-  <fieldset>
+<form [formGroup]="userIdentificaionForm" class="d-flex flex-wrap">
+  <fieldset class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <legend>
       <h2>ID Number</h2>
     </legend>
-    <section class="id-number-field">
-      <section *ngIf="idNumber">
+    <section class="d-flex flex-wrap id-number-field">
+      <section *ngIf="idNumber" class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         Studeny Id Number: {{ idNumber }}
       </section>
-      <label for="autogenerate-id-number" *ngIf="!idNumber">
-        Autogenerate Id Number <mat-checkbox type="checkbox" formControlName="autogenerateIdNumber"
-          id="autogenerate-id-number"></mat-checkbox>
-      </label>
+      <section class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <label for="autogenerate-id-number" *ngIf="!idNumber">
+          Autogenerate Id Number <mat-checkbox type="checkbox" formControlName="autogenerateIdNumber"
+            id="autogenerate-id-number"></mat-checkbox>
+        </label>
+      </section>
+      <section class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <mat-form-field *ngIf="!userIdentificaionForm.get('autogenerateIdNumber').value">
+          <label hidden for="idNumber"><span class="material-icons" matPrefix>person</span> Id Number</label>
 
-      <mat-form-field *ngIf="!userIdentificaionForm.get('autogenerateIdNumber').value">
-        <label hidden for="idNumber"><span class="material-icons" matPrefix>person</span> Id Number</label>
+          <input (blur)="validateIdNumber()" id="idNumber" type="text" placeholder="Id Number"
+            formControlName="idNumber" matInput>
+          <mat-error *ngIf="errors.idNumber">
+            {{ errors.idNumber }}
+          </mat-error>
 
-        <input (blur)="validateIdNumber()" id="idNumber" type="text" placeholder="Id Number" formControlName="idNumber"
-          matInput>
-        <mat-error *ngIf="errors.idNumber">
-          {{ errors.idNumber }}
-        </mat-error>
+        </mat-form-field>
+      </section>
 
-      </mat-form-field>
+
     </section>
   </fieldset>
-  <fieldset>
+  <fieldset class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <legend>
       <h2>Name</h2>
     </legend>
@@ -74,7 +79,7 @@
     </section>
 
   </fieldset>
-  <fieldset>
+  <fieldset class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <legend>
       <h2>Other Details</h2>
     </legend>
