Fixed testing problems

--- a/src/app/pages/admissions/students/add-student/add-student.component.html
+++ b/src/app/pages/admissions/students/add-student/add-student.component.html
@@ -1,4 +1,5 @@
 <header>Create A New Student Form</header>
+<app-student-academic-year-allocation></app-student-academic-year-allocation>
 <mat-accordion class="headers-align">
   <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
     <mat-expansion-panel-header>
