Fixed failing tests

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+// @import './assets/css/bootstrap.css';
 html, body { height: 100%; overflow: hidden; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
@@ -18,4 +18,3 @@ h2 {
   font-size: 15m;
   color: darkblue;
 }
-@import './assets/css/bootstrap.css';
